--- a/Quarto for thesis/supp_mat.qmd
+++ b/Quarto for thesis/supp_mat.qmd
@@ -23,18 +23,17 @@ results_folder <- here("Results", "Database-extracts", sim_name)
 
 ## Random intercept variance
 
-```{r, fig.height = 4, fig.width = 8, echo = FALSE}
+```{r, fig.height = 9, fig.width = 8, echo = FALSE}
 var_u <- readRDS(file = here(results_folder, "var_u.RDS"))
 
-for(myR2 in c(0.4, 0.7)){
   plot_data <- var_u |> 
-   filter(predict_method == "new0", R2 == myR2)
+   filter(predict_method == "new0")
   plot <- plot_data |> 
-    ProfacSims:::box_plot_error_var_u() #
+    ProfacSims:::box_plot_error_var_u_supp() #
   
-  plot <- plot + ggplot2::ggtitle(glue("Random intercept variance: R-sqaured = {myR2}")) 
+  plot <- plot + ggplot2::ggtitle(glue("Estimated random intercept variance")) 
     print(plot)
-}
+
 ```
 ## Calibration in the large
 ```{R, echo = FALSE}
@@ -57,25 +56,23 @@ calib_itl_stacked <- calib_itl_raw |>
 ```{r calib_itl_est, fig.height = 9, fig.width = 8, echo = FALSE}
 
 for(my_n_studies in c(4,8,16,32,64)){
-  for(my_ss in c(50, 200, 1000)){
      plot_data <- calib_itl_stacked |> 
            filter(
              predict_method != "new_dynamic", 
-             n_studies ==my_n_studies, 
-             study_sample_size_train ==my_ss) 
+             n_studies ==my_n_studies) 
 
           plot <- plot_data |> 
-            ProfacSims:::box_plot_by_pred_ss_supp(what = "est") #
+            ProfacSims:::box_plot_by_pred_ss_supp(what = "est") # 
           
           plot <- plot + 
             labs(
               title = "Calibration in the large",
-              subtitle = glue("Training data: {my_n_studies} studies of size {my_ss}")
+              subtitle = glue("Training data: {my_n_studies} studies")
             ) +
             ylab("Calibration in the large")
           print(plot)
       
-  }
+  
     
 }     
        
@@ -86,12 +83,10 @@ for(my_n_studies in c(4,8,16,32,64)){
 ```{r calib_itl_hetro, fig.height = 9, fig.width = 8, echo = FALSE}
 
 for(my_n_studies in c(4,8,16,32,64)){
-  for(my_ss in c(50, 200, 1000)){
      plot_data <- calib_itl_stacked |> 
            filter(
              predict_method != "new_dynamic", 
-             n_studies ==my_n_studies, 
-             study_sample_size_train ==my_ss) 
+             n_studies ==my_n_studies) 
 
           plot <- plot_data |> 
             ProfacSims:::box_plot_by_pred_ss_supp(what = "tau") #
@@ -99,12 +94,12 @@ for(my_n_studies in c(4,8,16,32,64)){
           plot <- plot + 
             labs(
               title = "Hetrogeneity in Calibration in the large",
-              subtitle = glue("Training data: {my_n_studies} studies of size {my_ss}")
+              subtitle = glue("Training data: {my_n_studies} studies")
             ) +
             ylab("Tau")
           print(plot)
       
-  }
+  
     
 }     
        
