--- a/Quarto for thesis/supp_mat.qmd
+++ b/Quarto for thesis/supp_mat.qmd
@@ -1,10 +1,17 @@
 ---
 title: "Prediction with new data for intercept - Supplementary material"
-format: pdf
+format: 
+  html:
+    number-sections: True
+    fig-height: 10
+    fig-width: 8
 editor: visual
+execute: 
+  echo: FALSE
+
 ---
 
-```{r echo = FALSE, include = FALSE}
+```{r include = FALSE}
 library(tidyverse)
 library(ggplot2)
 library(DBI)
@@ -23,7 +30,7 @@ results_folder <- here("Results", "Database-extracts", sim_name)
 
 ## Random intercept variance
 
-```{r, fig.height = 9, fig.width = 8, echo = FALSE}
+```{r}
 var_u <- readRDS(file = here(results_folder, "var_u.RDS"))
 
   plot_data <- var_u |> 
@@ -36,24 +43,14 @@ var_u <- readRDS(file = here(results_folder, "var_u.RDS"))
 
 ```
 ## Calibration in the large
-```{R, echo = FALSE}
-calib_itl_raw <- readRDS(file = here(results_folder, "calib_itl.RDS"))
+```{R}
+calib_itl_stacked <- readRDS(file = here(results_folder, "calib_itl_stacked.RDS"))
 
-calib_itl <- calib_itl_raw |> filter(model != "Not adjusting for study") |> 
-  filter(!(predict_method == "new0" & model != "Fixed intercept"))
-
-calib_itl0 <- calib_itl_raw |> filter(predict_method == "new0", intercept_est_sample_size == 10) |> 
-  mutate(intercept_est_sample_size = 0)
-
-calib_itl_stacked <- calib_itl_raw |> 
-  filter(predict_method != "new0") |> 
-  bind_rows(calib_itl0) |> 
-  mutate(tau = sqrt(tau2))
 ```
 
 
 ### Estimates
-```{r calib_itl_est, fig.height = 9, fig.width = 8, echo = FALSE}
+```{r calib_itl_est}
 
 for(my_n_studies in c(4,8,16,32,64)){
      plot_data <- calib_itl_stacked |> 
@@ -80,7 +77,7 @@ for(my_n_studies in c(4,8,16,32,64)){
 
 
 ### Hetrogeneity
-```{r calib_itl_hetro, fig.height = 9, fig.width = 8, echo = FALSE}
+```{r calib_itl_hetro}
 
 for(my_n_studies in c(4,8,16,32,64)){
      plot_data <- calib_itl_stacked |> 
@@ -104,4 +101,128 @@ for(my_n_studies in c(4,8,16,32,64)){
 }     
        
 ```
+
+## Calibration Slope
+```{R}
+calib_slope_stacked <- readRDS(file = here(results_folder, "calib_slope_stacked.RDS"))
+
+```
+
+
+### Estimates
+```{r calib_slope_est}
+
+for(my_n_studies in c(4,8,16,32,64)){
+     plot_data <- calib_slope_stacked |> 
+           filter(
+             predict_method != "new_dynamic", 
+             n_studies ==my_n_studies) 
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_ss_supp(what = "est") # 
+          
+          plot <- plot + 
+            labs(
+              title = "Calibration Slope",
+              subtitle = glue("Training data: {my_n_studies} studies")
+            ) +
+            ylab("Calibration Slope")
+          print(plot)
+      
+  
+    
+}     
+       
+```
+
+
+### Hetrogeneity
+```{r calib_slope_hetro}
+
+for(my_n_studies in c(4,8,16,32,64)){
+     plot_data <- calib_slope_stacked |> 
+           filter(
+             predict_method != "new_dynamic", 
+             n_studies ==my_n_studies) 
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_ss_supp(what = "tau") #
+          
+          plot <- plot + 
+            labs(
+              title = "Hetrogeneity in Calibration Slope",
+              subtitle = glue("Training data: {my_n_studies} studies")
+            ) +
+            ylab("Tau")
+          print(plot)
+      
+  
+    
+}     
+       
+```
+
+
+
+## R-squared
+```{R}
+r_squared_stacked <- readRDS(file = here(results_folder, "r_squared_stacked.RDS"))
+```
+
+
+### Estimates
+```{r r_squared_est, warning = FALSE}
+
+for(my_n_studies in c(4,8,16,32,64)){
+     plot_data <- r_squared_stacked |> 
+           filter(
+             predict_method != "new_dynamic", 
+             n_studies ==my_n_studies) 
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_ss_supp(what = "est") # 
+          
+          plot <- plot + 
+            labs(
+              title = "R-Squared",
+              subtitle = glue("Training data: {my_n_studies} studies")
+            ) +
+            ylab("R-Squared") +
+            scale_y_continuous(limits = c(0, NA))
+          print(plot)
+      
+  
+    
+}     
+       
+```
+
+
+### Hetrogeneity
+```{r r_squared_hetro, warning = FALSE}
+
+for(my_n_studies in c(4,8,16,32,64)){
+     plot_data <- r_squared_stacked |> 
+           filter(
+             predict_method != "new_dynamic", 
+             n_studies ==my_n_studies) 
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_ss_supp(what = "tau") #
+          
+          plot <- plot + 
+            labs(
+              title = "Hetrogeneity in R-Squared",
+              subtitle = glue("Training data: {my_n_studies} studies")
+            ) +
+            ylab("Tau")
+          print(plot)
+      
+  
+    
+}     
+       
+```
+
+
 
