--- a/Quarto for thesis/supp_mat_pt2.qmd
+++ b/Quarto for thesis/supp_mat_pt2.qmd
@@ -24,7 +24,7 @@ library(glue)
 sim_name <- "240211_cluster-x"
 results_folder <- here("Results", "Database-extracts", sim_name)
 
-studies_vector <- c(4, 8, 16, 32, 64)
+studies_vector <- c(4)
 icc_vector <- c(0.05, 0.2)
 ```
 {{< pagebreak >}}
@@ -43,7 +43,7 @@ for(my_n_studies in studies_vector){
   for(myICC in icc_vector){
     plot_data <- calib_itl |> filter(n_studies ==my_n_studies, myICC ==myICC) 
       plot <- plot_data |> 
-        ProfacSims:::box_plot_cluster_x() + #
+        ProfacSims:::box_plot_cluster_x_sup() + #
         ylab(glue("Calibration In the Large")) +
         scale_y_continuous(limits = c(-0.25,0.25)) +
         labs(
@@ -66,7 +66,7 @@ for(my_n_studies in studies_vector){
   for(myICC in icc_vector){
     plot_data <- calib_itl |> filter(n_studies ==my_n_studies, myICC ==myICC) 
       plot <- plot_data |> 
-        ProfacSims:::box_plot_cluster_x() + #
+        ProfacSims:::box_plot_cluster_x_sup() + #
         ylab(glue("Calibration In the Large")) +
         labs(
               title = "Between study Hetrogeneity in Calibration in the large",
