--- a/Quarto for thesis/supp_mat_pt2.qmd
+++ b/Quarto for thesis/supp_mat_pt2.qmd
@@ -24,7 +24,7 @@ library(glue)
 sim_name <- "240211_cluster-x"
 results_folder <- here("Results", "Database-extracts", sim_name)
 
-studies_vector <- c(4, 8)
+studies_vector <- c(4)
 icc_vector <- c(0.05, 0.2)
 ```
 ## Calibration in the large
@@ -47,7 +47,8 @@ for(my_n_studies in studies_vector){
         labs(
               title = "Calibration in the large",
               subtitle = glue("Training data: {my_n_studies} studies")
-            )
+            ) 
+        
       
         print(plot)
   }
@@ -121,7 +122,7 @@ for(my_n_studies in studies_vector){
               title = "Between study Hetrogeneity in Calibration Slope",
               subtitle = glue("Training data: {my_n_studies} studies")
             ) +
-        ylab("Tau") +  scale_y_continuous(limits = c(0, 0.1))
+        ylab("Tau") +  scale_y_continuous(limits = c(0, 0.1)) 
       
       
         print(plot)
