--- a/Quarto for thesis/simulaiton_chapter_plots_pt2.qmd
+++ b/Quarto for thesis/simulaiton_chapter_plots_pt2.qmd
@@ -19,9 +19,56 @@ library(here)
 library(glue)
 
 # Loading files:
-sim_name <- "240124-pred-new-data"
+sim_name <- "240211_cluster-x"
 results_folder <- here("Results", "Database-extracts", sim_name)
 
-
+studies_vector <- c(4, 8, 16, 32, 64)
+icc_vector <- c(0.05, 0.2)
+```
+## Calibration in the large
+```{R}
+calib_itl <- readRDS(file = here(results_folder, "calib_itl.RDS")) |> 
+  filter(model != "Random intercept - ML", model != "Hausman - centred") |> 
+  ProfacSims:::correct_model_spelling()
 
 ```
+No plots
+
+## Calibration Slope
+```{R}
+calib_slope <- readRDS(file = here(results_folder, "calib_slope.RDS")) |> 
+  filter(model != "Random intercept - ML", model != "Hausman - centred") |> 
+  ProfacSims:::correct_model_spelling()
+
+```
+
+### Estimates
+```{r calib_slope_est}
+calib_slope$plot_value = calib_slope$est
+my_n_studies <- 32
+my_icc <- 0.05
+    plot_data <- calib_slope |> filter(n_studies ==my_n_studies) 
+      plot <- plot_data |> 
+        ProfacSims:::box_plot_cluster_x_main() + #
+        ylab(glue("Calibration In the Large")) +
+        labs(
+              title = "Calibration Slope",
+              subtitle = glue("Training data: {my_n_studies} studies, ICC: {my_icc")
+            ) +  scale_y_continuous(limits = c(0.75, 1.75))
+        
+      
+        print(plot)
+
+```
+
+
+
+
+## MSE
+```{R}
+mse <- readRDS(file = here(results_folder, "mse.RDS")) |> 
+  filter(model != "Random intercept - ML", model != "Hausman - centred") |> 
+  ProfacSims:::correct_model_spelling()
+
+```
+
