--- a/Quarto for thesis/supp_mat_pt2.qmd
+++ b/Quarto for thesis/supp_mat_pt2.qmd
@@ -3,6 +3,7 @@ title: "Prediction with new data for intercept - Supplementary material part 2"
 format: 
   pdf:
     number-sections: True
+    toc: true
     fig-height: 10
     fig-width: 8
 editor: visual
@@ -24,7 +25,7 @@ library(glue)
 sim_name <- "240211_cluster-x"
 results_folder <- here("Results", "Database-extracts", sim_name)
 
-studies_vector <- c(4)
+studies_vector <- c(4, 8, 16, 32, 64)
 icc_vector <- c(0.05, 0.2)
 ```
 ## Calibration in the large
@@ -47,7 +48,7 @@ for(my_n_studies in studies_vector){
         labs(
               title = "Calibration in the large",
               subtitle = glue("Training data: {my_n_studies} studies")
-            ) +
+            ) 
         
       
         print(plot)
@@ -129,3 +130,58 @@ for(my_n_studies in studies_vector){
   }
 
 ```
+
+
+## MSE
+```{R}
+mse <- readRDS(file = here(results_folder, "mse.RDS")) |> 
+  filter(model != "Random intercept - ML", model != "Hausman - centred") |> 
+  ProfacSims:::correct_model_spelling()
+
+```
+
+### Estimates
+```{r mse_est}
+mse$plot_value = mse$est
+for(my_n_studies in studies_vector){
+    plot_data <- mse |> filter(n_studies ==my_n_studies) 
+      plot <- plot_data |> 
+        ProfacSims:::box_plot_cluster_x_sup() + #
+        ylab(glue("Calibration In the Large")) +
+        labs(
+              title = "Mean Squared Error",
+              subtitle = glue("Training data: {my_n_studies} studies")) 
+      
+    if(my_n_studies ==4){
+      plot <- plot+  scale_y_continuous(limits = c(0.575, 0.8)) 
+    } else {
+            plot <- plot+  scale_y_continuous(limits = c(0.575, 0.7)) 
+    }
+      
+        print(plot)
+}
+```
+
+
+
+### Hetrogeneity
+
+```{r mse_hetro}
+mse$plot_value = sqrt(mse$tau2)
+for(my_n_studies in studies_vector){
+    plot_data <- mse |> filter(n_studies ==my_n_studies) 
+      plot <- plot_data |> 
+        ProfacSims:::box_plot_cluster_x_sup() + #
+        ylab(glue("Calibration In the Large")) +
+        labs(
+              title = "Between study Hetrogeneity in Mean Squared Error",
+              subtitle = glue("Training data: {my_n_studies} studies")
+            ) +
+        ylab("Tau") +  scale_y_continuous(limits = c(0, 0.2)) 
+      
+      
+        print(plot)
+  }
+
+```
+
